--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/medical_technician_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/medical_technician_survivor.yml
@@ -44,7 +44,7 @@
 - type: entity
   parent: CMSpawnPointJobBase
   id: RMCSpawnPointSurvivorMedicalTechnician
-  name: survivor un peacekeeper spawn point
+  name: survivor medical technician spawn point
   components:
   - type: SpawnPoint
     job_id: CMSurvivor
