--- a/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
+++ b/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
@@ -188,3 +188,5 @@
     cm-chatsan-word-bald: cm-chatsan-replacement-bald
     cm-chatsan-word-woyer: cm-chatsan-replacement-woyer
     cm-chatsan-word-senti: cm-chatsan-replacement-senti
+    cm-chatsan-word-sigma: cm-chatsan-replacement-sigma
+    cm-chatsan-word-xigma: cm-chatsan-replacement-xigma
