port sprites for UN-M1 body armor, fix more YML errors and mistakes in commander surv especially

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/commander_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/commander_survivor.yml
@@ -49,7 +49,7 @@
         state: xo
       background:
         sprite: _RMC14/Interface/map_blips.rsi
-        state: background_command
+        state: background_shipside
     - type: EquipSurvivorPreset
       preset: RMCSurvivorPresetNoGun
   hidden: true
