--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/un_peacekeeper_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/un_peacekeeper_survivor.yml
@@ -37,7 +37,7 @@
     ears: CMHeadsetColony
     eyes: CMGlassesSecurity
     jumpsuit: RMCJumpsuitUNSecurity
-    outerClothing: RMCArmorVest
+    outerClothing: RMCArmorPMCRiot
     gloves: RMCHandsVeteran
     shoes: RMCShoesJackboots
     back: CMSatchelSecuritySurvivorFill
