Fix picking normal civ surv instead of map insert ones, add some commented out stuff for SpawnMenuRoleName

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/un_peacekeeper_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/un_peacekeeper_survivor.yml
@@ -5,6 +5,7 @@
   description: cm-job-description-survivor
   playTimeTracker: CMJobSurvivorUNPeacekeeper
   startingGear: RMCGearSurvivorUNPeacekeeper
+  #spawnMenuRoleName: UN Peacekeeper (NV Survivor)
   special:
   - !type:AddComponentSpecial
     components:
