--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/beachbum.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/beachbum.yml
@@ -5,6 +5,7 @@
   description: cm-job-description-survivor
   playTimeTracker: CMJobSurvivorBeachBum
   startingGear: RMCGearSurvivorBeachBum
+  #spawnMenuRoleName: Beach Bum (NV Survivor)
   special:
   - !type:AddComponentSpecial
     components:
