--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/technician_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/technician_survivor.yml
@@ -5,6 +5,7 @@
   description: cm-job-description-survivor
   playTimeTracker: CMJobSurvivorTechnician
   startingGear: RMCGearSurvivorTechnician
+  #spawnMenuRoleName: Engineering Technician (NV Survivor)
   special:
   - !type:AddComponentSpecial
     components:
