Condense some YAML with the magic of PARENTING!

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/cargo_technician_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/cargo_technician_survivor.yml
@@ -40,6 +40,7 @@
     ears: CMHeadsetColony
     pocket1: RMCPouchSurvivalFill
     pocket2: RMCPouchToolsFill
+# TODO RMC Meson Goggles
 
 - type: entity
   parent: CMSpawnPointJobBase
