--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/technician_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/technician_survivor.yml
@@ -30,19 +30,12 @@
       preset: RMCGearSurvivorPresetTechnician
 
 - type: startingGear
+  parent: RMCGearSurvivorEngineer
   id: RMCGearSurvivorTechnician
   equipment:
     head: RMCHardhatBlue
-    ears: CMHeadsetColony
-    eyes: RMCWeldingGoggles
     jumpsuit: RMCJumpsuitCivilian
     outerClothing: RMCHazardVestBlue
-    gloves: CMHandsInsulated
-    shoes: RMCShoesJackboots
-    back: CMSatchelEngineerSurvivorFill
-    id: CMIDCardColonistEngineer
-    pocket1: RMCPouchSurvivalFill
-    pocket2: CMWelder # TODO RMC14 industrial welder
 
 - type: entity
   parent: CMSpawnPointJobBase
