add new clothes to relevent survs

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/beachbum.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/beachbum.yml
@@ -48,7 +48,7 @@
     back: CMSatchelFillSurvivorBeachBum
     head: RMCBoonie
     mask: RMCCigarette
-    shoes: RMCShoesLeather # TODO RMC14 sandals
+    shoes: RMCShoesSandals
     gloves: CMHandsBrown
     id: CMIDCardColonist
     ears: CMHeadsetColony
