--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/cargo_technician_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/cargo_technician_survivor.yml
@@ -31,9 +31,9 @@
 - type: startingGear
   id: RMCGearSurvivorCargoTechnician
   equipment:
-    jumpsuit: RMCJumpsuitCivilian # TODO RMC colored utility jumpsuits (brown)
+    jumpsuit: RMCJumpsuitCivilianBrown
     back: CMSatchelMarineTechSurvivorFill
-    head: RMCHeadBeanie # TODO RMC14 colored beanies
+    head: RMCHeadBeanieTan
     shoes: RMCShoesJackboots
     gloves: CMHandsBrown
     id: CMIDCardColonistEngineer
