wall mount tv, vehicles no longer snap to grid

--- a/Resources/Prototypes/_RMC14/Entities/Structures/prop_vehicles3.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/prop_vehicles3.yml
@@ -1,6 +1,7 @@
 ﻿- type: entity
   parent: RMCPropVehicleBase
   id: RMCPropVehicleLargeBase
+  abstract: true
   components:
   - type: Fixtures
     fixtures:
