--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/marksman.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/marksman.yml
@@ -5,6 +5,10 @@
   playTimeTracker: RMCJobSurvivorMarksmanForecon
   startingGear: RMCGearForeconBase
   icon: "CMJobIconWeaponsSpecialist"
+  requirements:
+  - !type:RoleTimeRequirement
+    role: CMJobWeaponsSpecialist
+    time: 3600 # 1 hour
   special:
   - !type:AddComponentSpecial
     components:
