--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/smart_gun_operator.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/smart_gun_operator.yml
@@ -5,6 +5,10 @@
   playTimeTracker: RMCJobSurvivorSmartgunOperatorForecon
   startingGear: RMCGearForeconSmartgunOperator
   icon: "CMJobIconSmartGunOperator"
+  requirements:
+  - !type:RoleTimeRequirement
+    role: CMJobSmartGunOperator
+    time: 3600 # 1 hour
   special:
   - !type:AddComponentSpecial
     components:
