--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/feroxi.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/feroxi.yml
@@ -89,7 +89,7 @@
       path: /Audio/Effects/bite.ogg
     animation: WeaponArcBite
   - type: Inventory
-    speciesId: reptilian
+    speciesId: feroxi
 
 - type: entity
   parent: BaseSpeciesDummy
