we merge master

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Walls/barricade_metal.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Walls/barricade_metal.yml
@@ -166,6 +166,9 @@
     thornsDamage:
       types:
         Slash: 10
+  - type: Construction
+    graph: BarricadeMetalGraph
+    node: nodeMetal
   - type: RMCConstructionUpgradeTarget
     upgrades: ["RMCExplosiveUpgrade", "RMCBiohazardUpgrade", "RMCBruteUpgrade"]
   - type: Tag
@@ -267,6 +270,9 @@
             collection: MetalBreak
         - !type:DoActsBehavior
           acts: [ "Destruction" ]
+    - type: Construction
+      graph: BarricadeTurnstileGraph
+      node: nodeTurnstile
 
 - type: entity
   parent: CMBarricadeTurnstile
@@ -279,6 +285,9 @@
       layers:
       - state: turnstile_med
       - map: [ "acided" ]
+    - type: Construction
+      graph: BarricadeTurnstileGraph
+      node: nodeTurnstile
 
 # Handrails
 - type: entity
@@ -315,6 +324,9 @@
         - !type:DoActsBehavior
           acts: [ "Destruction" ]
     - type: Climbable
+    - type: Construction
+      graph: BarricadeHandrailGraph
+      node: nodeHandrail
 
 - type: entity
   parent: RMCBarricadeHandrail
@@ -324,6 +336,9 @@
       layers:
       - state: handrail_b_0
       - map: [ "acided" ]
+    - type: Construction
+      graph: BarricadeHandrailGraph
+      node: nodeHandrail
 
 - type: entity
   parent: RMCBarricadeHandrail
@@ -333,6 +348,9 @@
       layers:
       - state: handrail_med
       - map: [ "acided" ]
+    - type: Construction
+      graph: BarricadeHandrailGraph
+      node: nodeHandrail
 
 - type: entity
   parent: RMCBarricadeHandrail
@@ -342,6 +360,9 @@
       layers:
       - state: handrail_strata
       - map: [ "acided" ]
+    - type: Construction
+      graph: BarricadeHandrailGraph
+      node: nodeHandrail
 
 - type: entity
   parent: RMCBarricadeHandrail
@@ -351,6 +372,9 @@
       layers:
       - state: hr_kutjevo
       - map: [ "acided" ]
+    - type: Construction
+      graph: BarricadeHandrailGraph
+      node: nodeHandrail
 
 - type: entity
   parent: RMCBarricadeHandrail
@@ -360,6 +384,9 @@
       layers:
       - state: wire_rail
       - map: [ "acided" ]
+    - type: Construction
+      graph: BarricadeHandrailGraph
+      node: nodeHandrail
 
 - type: entity
   parent: RMCBarricadeHandrail
@@ -369,6 +396,9 @@
       layers:
       - state: handrail_hybrisa
       - map: [ "acided" ]
+    - type: Construction
+      graph: BarricadeHandrailGraph
+      node: nodeHandrail
 
 - type: entity
   parent: RMCBarricadeHandrail
@@ -513,6 +543,9 @@
     thornsDamage:
       types:
         Slash: 10
+  - type: Construction
+    graph: BarricadeMetalDoorGraph
+    node: nodeBarricadeMetalDoor
   - type: InteractedBlacklist
     blacklist:
       components:
