--- a/Resources/Prototypes/_RMC14/Recipes/Construction/structures.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Construction/structures.yml
@@ -188,6 +188,159 @@
   conditions:
     - !type:TileNotBlocked
 
+# Barricades
+- type: construction
+  parent: RMC
+  name: Metal Barricade
+  id: CMBarricadeMetal
+  graph: BarricadeMetalGraph
+  startNode: start
+  targetNode: nodeMetal
+  category: construction-category-cm-structures
+  description: A military-grade metal barricade.
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  icon:
+    sprite: _RMC14/Structures/Walls/Barricades/barricade.rsi
+    state: metal
+  conditions:
+    - !type:TileNotBlocked
+    - !type:TileBarricadeClear
+
+- type: construction
+  parent: RMC
+  name: Plasteel Barricade
+  id: RMCBarricadePlasteel
+  graph: BarricadePlasteelGraph
+  startNode: start
+  targetNode: nodePlasteel
+  category: construction-category-cm-structures
+  description: A military-grade hardened plasteel barricade.
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  icon:
+    sprite: _RMC14/Structures/Walls/Barricades/barricade.rsi
+    state: plasteel
+  conditions:
+    - !type:TileNotBlocked
+    - !type:TileBarricadeClear
+
+- type: construction
+  parent: RMC
+  name: Wooden Barricade
+  id: RMCBarricadeWood
+  graph: BarricadeWoodGraph
+  startNode: start
+  targetNode: nodeWood
+  category: construction-category-cm-structures
+  description: A makeshift wooden barricade.
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  icon:
+    sprite: _RMC14/Structures/Walls/Barricades/barricade.rsi
+    state: wooden
+  conditions:
+    - !type:TileNotBlocked
+    - !type:TileBarricadeClear
+
+- type: construction
+  parent: RMC
+  name: Turnstile
+  id: CMBarricadeTurnstile
+  graph: BarricadeTurnstileGraph
+  startNode: start
+  targetNode: nodeTurnstile
+  category: construction-category-cm-structures
+  description: A fence to ensure marines stay in line.
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  icon:
+    sprite: _RMC14/Structures/Walls/Barricades/barricade.rsi
+    state: turnstile
+  conditions:
+    - !type:TileNotBlocked
+    - !type:TileBarricadeClear
+
+- type: construction
+  parent: RMC
+  name: Medical Turnstile
+  id: CMBarricadeTurnstileMed
+  graph: BarricadeTurnstileMedGraph
+  startNode: start
+  targetNode: nodeTurnstileMed
+  category: construction-category-cm-structures
+  description: A fence to ensure marines stay in line in medical.
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  icon:
+    sprite: _RMC14/Structures/Walls/Barricades/barricade.rsi
+    state: turnstile_med
+  conditions:
+    - !type:TileNotBlocked
+    - !type:TileBarricadeClear
+
+- type: construction
+  parent: RMC
+  name: Handrail
+  id: RMCBarricadeHandrail
+  graph: BarricadeHandrailGraph
+  startNode: start
+  targetNode: nodeHandrail
+  category: construction-category-cm-structures
+  description: A railing, for your hands. Woooow.
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  icon:
+    sprite: _RMC14/Structures/Walls/Barricades/barricade.rsi
+    state: handrail_a_0
+  conditions:
+    - !type:TileNotBlocked
+    - !type:TileBarricadeClear
+
+- type: construction
+  parent: RMC
+  name: Folding Metal Barricade
+  id: CMBarricadeMetalDoor
+  graph: BarricadeMetalDoorGraph
+  startNode: start
+  targetNode: nodeBarricadeMetalDoor
+  category: construction-category-cm-structures
+  description: A barricade that can be folded or opened to allow marines through.
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  icon:
+    sprite: _RMC14/Structures/Walls/Barricades/barricade.rsi
+    state: folding_metal
+  conditions:
+    - !type:TileNotBlocked
+    - !type:TileBarricadeClear
+
+- type: construction
+  parent: RMC
+  name: Folding Plasteel Barricade
+  id: CMBarricadePlasteelDoor
+  graph: BarricadePlasteelDoorGraph
+  startNode: start
+  targetNode: nodeBarricadePlasteelDoor
+  category: construction-category-cm-structures
+  description: A barricade that can be folded or opened to allow marines through. Made from hardened plasteel.
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  icon:
+    sprite: _RMC14/Structures/Walls/Barricades/barricade.rsi
+    state: folding_plasteel
+  conditions:
+    - !type:TileNotBlocked
+    - !type:TileBarricadeClear
+
 #lighting
 - type: construction
   parent: RMC
