--- a/Resources/Prototypes/_RMC14/Entities/Structures/Furniture/chairs.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Furniture/chairs.yml
@@ -1,4 +1,7 @@
 # Basic chair
+- type: Tag
+  id: RMCSeat
+
 - type: entity
   abstract: true
   parent: SeatBase
@@ -11,6 +14,9 @@
   - type: Sprite
     sprite: _RMC14/Structures/Furniture/chairs.rsi
     state: chair
+  - type: Tag
+    tags:
+    - RMCSeat
 
 - type: entity
   parent: CMSeatBase
