--- a/Resources/Prototypes/_RMC14/Entities/Objects/Materials/Sheets/metal.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Materials/Sheets/metal.yml
@@ -1,234 +1,290 @@
+# Metal
+
+- type: material
+  id: CMSteel
+  stackEntity: CMSheetMetal
+  name: materials-metal
+  icon: { sprite: _RMC14/Objects/Materials/Sheets/metal.rsi, state: metal }
+  price: 0.05
+
+- type: stack
+  id: CMSteel
+  name: metal
+  icon: { sprite: /Textures/_RMC14/Objects/Materials/Sheets/metal.rsi, state: metal }
+  spawn: CMSheetMetal
+  maxCount: 50
+
 - type: entity
   abstract: true
-  parent: BaseItem
-  id: SheetMetalBase
-  description: A sheet of metal, used often on the station in various applications.
-  components:
-  - type: Sprite
-    sprite: Objects/Materials/Sheets/metal.rsi
-  - type: Item
-    sprite: Objects/Materials/Sheets/metal.rsi
-    size: Normal
-  - type: StaticPrice
-    price: 0
-  - type: Tag
-    tags:
-    - Sheet
-    - Metal
-  - type: Damageable
-    damageContainer: Inorganic
-    damageModifierSet: Metallic
-  - type: Destructible
-    thresholds:
-    - trigger:
-        !type:DamageTrigger
-        damage: 100
-      behaviors:
-      - !type:DoActsBehavior
-        acts: [ "Destruction" ]
-  - type: SolutionContainerManager
-    solutions:
-      steel:
-        canReact: false
-  - type: GuideHelp
-    guides:
-    - ExpandingRepairingStation
-
-- type: entity
   parent: SheetMetalBase
-  id: SheetSteel
-  name: steel
-  suffix: Full
+  id: CMSheetMetalBase
   components:
-  - type: Material
-  - type: PhysicalComposition
-    materialComposition:
-      Steel: 100
-  - type: Stack
-    stackType: Steel
-    baseLayer: base
-    layerStates:
-    - steel
-    - steel_2
-    - steel_3
-  - type: Sprite
-    state: steel_3
-    layers:
-    - state: steel_3
-      map: ["base"]
-  - type: Item
-    heldPrefix: steel
-  - type: Appearance
-  - type: FloorTile
-    outputs:
-    - Plating
-  - type: Extractable
-    grindableSolutionName: steel
-  - type: SolutionContainerManager
-    solutions:
-      steel:
-        reagents:
-        - ReagentId: Iron
-          Quantity: 9
-        - ReagentId: Carbon
-          Quantity: 1
+    - type: Stack
+      count: 50
+    - type: Sprite
+      sprite: _RMC14/Objects/Materials/Sheets/metal.rsi
+    - type: Item
+      size: Normal
+      sprite: _RMC14/Objects/Materials/Sheets/metal.rsi
+    - type: Appearance
 
 - type: entity
-  parent: SheetSteel
-  id: SheetSteel10
-  name: steel
-  suffix: 10
+  parent: CMSheetMetalBase
+  id: CMSheetMetal
+  name: metal sheets
+  description: Sheets made out of metal. They have been dubbed Metal Sheets.
+  suffix: Filled
   components:
-  - type: Sprite
-    state: steel
-  - type: Stack
-    stackType: Steel
-    count: 10
+    - type: RMCConstructionItem
+      buildable:
+      - RMCBarbedWireBuild
+      - RMCMetalBarricadeBuild
+      - RMCMetalBarricadeFoldableBuild
+      - RMCHandrailBuild
+      - RMCDividerConstruction
+      - RMCWindowFrameBuild
+      - RMCDividerConstruction
+      - RMCComfyChairList
+    - type: RMCConstructionUpgradeItem
+      whitelist:
+        tags:
+        - RMCMetalBarricade
+        - RMCPlasteelBarricade
+    - type: Material
+    - type: PhysicalComposition
+      materialComposition:
+        CMSteel: 100
+    - type: Stack
+      count: 50
+      stackType: CMSteel
+      baseLayer: base
+      layerStates:
+        - metal
+        - metal_2
+        - metal_3
+        - metal_4
+    - type: Sprite
+      layers:
+        - state: metal_4
+          map: ["base"]
+    - type: UserInterface
+      interfaces:
+        enum.RMCConstructionUiKey.Key:
+          type: RMCConstructionBui
 
 - type: entity
-  parent: SheetSteel
-  id: SheetSteel1
-  name: steel
+  parent: CMSheetMetal
+  id: CMSheetMetal10
+  suffix: "10"
+  components:
+    - type: Sprite
+      state: metal_2
+    - type: Stack
+      stackType: CMSteel
+      count: 10
+
+- type: entity
+  parent: CMSheetMetal
+  id: CMSheetMetal20
+  suffix: "20"
+  components:
+    - type: Sprite
+      state: metal_3
+    - type: Stack
+      stackType: CMSteel
+      count: 20
+
+- type: entity
+  parent: CMSheetMetal
+  id: CMSheetMetal30
+  suffix: "30"
+  components:
+    - type: Sprite
+      state: metal_3
+    - type: Stack
+      stackType: CMSteel
+      count: 30
+
+- type: entity
+  parent: CMSheetMetal
+  id: CMSheetMetal40
+  suffix: "40"
+  components:
+    - type: Sprite
+      state: metal_3
+    - type: Stack
+      stackType: CMSteel
+      count: 40
+
+- type: entity
+  parent: CMSheetMetal
+  id: CMSheetMetal50
+  suffix: "50"
+  components:
+    - type: Sprite
+      state: metal_4
+    - type: Stack
+      stackType: CMSteel
+      count: 50
+
+- type: entity
+  parent: CMSheetMetal
+  id: CMSheetMetal1
   suffix: Single
   components:
-  - type: Sprite
-    state: steel
-  - type: Stack
-    stackType: Steel
-    count: 1
+    - type: Sprite
+      state: metal
+    - type: Stack
+      stackType: CMSteel
+      count: 1
 
 - type: entity
-  parent: SheetSteel
-  id: SheetSteelLingering0
-  suffix: Lingering, 0
+  parent: CMSheetMetal
+  id: CMSheetMetal2
+  suffix: "2"
   components:
-  - type: Stack
-    lingering: true
-    count: 0
+    - type: Sprite
+      state: metal
+    - type: Stack
+      stackType: CMSteel
+      count: 2
+
+# Plasteel
+
+- type: material
+  id: CMPlasteel
+  stackEntity: CMSheetPlasteel
+  name: materials-plasteel
+  icon: { sprite: _RMC14/Objects/Materials/Sheets/plasteel.rsi, state: plasteel }
+  color: "#696969"
+  price: 0.28
+
+- type: stack
+  id: CMPlasteel
+  name: plasteel
+  icon: { sprite: /Textures/_RMC14/Objects/Materials/Sheets/plasteel.rsi, state: plasteel }
+  spawn: CMSheetPlasteel
+  maxCount: 50
 
 - type: entity
-  parent: SheetMetalBase
-  id: SheetBrass
-  name: brass
-  description: A sheet of brass, primarily used by clockwork enthusiasts and the remnants of Ratvarian cults.
-  suffix: Full
+  parent: CMSheetMetalBase
+  id: CMSheetPlasteel
+  name: plasteel sheet
+  description: Plasteel is an expensive, durable material made from combining platinum, steel, and advanced polymers to create a metal that is corrosion-resistant, highly durable, and lightweight. The only reason this isn't used more often is because of how damn costly it is."
+  suffix: Filled
   components:
-  - type: Material
-  - type: PhysicalComposition
-    materialComposition:
-      Brass: 100
-  - type: Stack
-    stackType: Brass
-    baseLayer: base
-    layerStates:
-    - brass
-    - brass_2
-    - brass_3
-  - type: Sprite
-    state: brass_3
-    layers:
-    - state: brass_3
-      map: ["base"]
-  - type: Item
-    heldPrefix: brass
-  - type: Appearance
-  - type: FloorTile
-    outputs:
-    - PlatingBrass
-  - type: Extractable
-    grindableSolutionName: brass
-  - type: SolutionContainerManager
-    solutions:
-      brass:
-        reagents:
-        - ReagentId: Zinc
-          Quantity: 3.3
-        - ReagentId: Copper
-          Quantity: 6.7
+    - type: RMCConstructionItem
+      buildable:
+      - RMCPlasteelBarricadeFoldableBuild
+      - RMCPlasteelBarricadeBuild
+      - RMCDividerConstruction
+      - RMCReinforcedWindowFrameBuild
+      - RMCDividerConstruction
+    - type: Material
+    - type: PhysicalComposition
+      materialComposition:
+        CMPlasteel: 100
+    - type: Stack
+      count: 40
+      stackType: CMPlasteel
+      baseLayer: base
+      layerStates:
+        - plasteel
+        - plasteel_2
+        - plasteel_3
+        - plasteel_4
+    - type: Sprite
+      sprite: _RMC14/Objects/Materials/Sheets/plasteel.rsi
+      layers:
+        - state: plasteel_4
+          map: ["base"]
+    - type: Item
+      sprite: _RMC14/Objects/Materials/Sheets/plasteel.rsi
+      heldPrefix: plasteel
+    - type: UserInterface
+      interfaces:
+        enum.RMCConstructionUiKey.Key:
+          type: RMCConstructionBui
 
 - type: entity
-  parent: SheetBrass
-  id: SheetBrass10
-  name: brass
-  suffix: 10
+  parent: CMSheetPlasteel
+  id: CMSheetPlasteel10
+  name: plasteel
+  suffix: "10"
   components:
-  - type: Sprite
-    state: brass
-  - type: Stack
-    stackType: Brass
-    count: 10
+    - type: Sprite
+      state: plasteel_2
+    - type: Stack
+      stackType: CMPlasteel
+      count: 10
 
 - type: entity
-  parent: SheetBrass
-  id: SheetBrass1
-  name: brass
+  parent: CMSheetPlasteel
+  id: CMSheetPlasteel15
+  name: plasteel
+  suffix: "15"
+  components:
+    - type: Sprite
+      state: plasteel_2
+    - type: Stack
+      stackType: CMPlasteel
+      count: 15
+
+- type: entity
+  parent: CMSheetPlasteel
+  id: CMSheetPlasteel20
+  suffix: "20"
+  components:
+    - type: Sprite
+      state: plasteel_2
+    - type: Stack
+      stackType: CMPlasteel
+      count: 20
+
+- type: entity
+  parent: CMSheetPlasteel
+  id: CMSheetPlasteel30
+  name: plasteel
+  suffix: "30"
+  components:
+    - type: Sprite
+      state: plasteel_2
+    - type: Stack
+      stackType: CMPlasteel
+      count: 30
+
+- type: entity
+  parent: CMSheetPlasteel
+  id: CMSheetPlasteel40
+  name: plasteel
+  suffix: "40"
+  components:
+    - type: Sprite
+      state: plasteel_2
+    - type: Stack
+      stackType: CMPlasteel
+      count: 40
+
+- type: entity
+  parent: CMSheetPlasteel
+  id: CMSheetPlasteel50
+  name: plasteel
+  suffix: "50"
+  components:
+    - type: Sprite
+      state: plasteel_2
+    - type: Stack
+      stackType: CMPlasteel
+      count: 50
+
+- type: entity
+  parent: CMSheetPlasteel
+  id: CMSheetPlasteel1
+  name: plasteel
   suffix: Single
   components:
-  - type: Sprite
-    state: brass
-  - type: Stack
-    stackType: Brass
-    count: 1
-
-- type: entity
-  parent: SheetMetalBase
-  id: SheetPlasteel
-  name: plasteel
-  suffix: Full
-  components:
-  - type: Material
-  - type: PhysicalComposition
-    materialComposition:
-      Plasteel: 100
-  - type: Stack
-    stackType: Plasteel
-    baseLayer: base
-    layerStates:
-    - plasteel
-    - plasteel_2
-    - plasteel_3
-  - type: Sprite
-    state: plasteel_3
-    layers:
-    - state: plasteel_3
-      map: ["base"]
-  - type: Item
-    heldPrefix: plasteel
-  - type: Appearance
-  - type: Extractable
-    grindableSolutionName: plasteel
-  - type: SolutionContainerManager
-    solutions:
-      plasteel:
-        reagents:
-        - ReagentId: Plasma
-          Quantity: 10
-        - ReagentId: Iron
-          Quantity: 9
-        - ReagentId: Carbon
-          Quantity: 1
-        canReact: false
-
-- type: entity
-  parent: SheetPlasteel
-  id: SheetPlasteel10
-  name: plasteel
-  suffix: 10
-  components:
-  - type: Sprite
-    state: plasteel
-  - type: Stack
-    stackType: Plasteel
-    count: 10
-
-- type: entity
-  parent: SheetPlasteel
-  id: SheetPlasteel1
-  name: plasteel
-  suffix: Single
-  components:
-  - type: Sprite
-    state: plasteel
-  - type: Stack
-    stackType: Plasteel
-    count: 1
+    - type: Sprite
+      state: plasteel
+    - type: Stack
+      stackType: CMPlasteel
+      count: 1
