--- a/Resources/Prototypes/_RMC14/Entities/guide_book_entities.yml
+++ b/Resources/Prototypes/_RMC14/Entities/guide_book_entities.yml
@@ -2,6 +2,7 @@
   id: RMCBaseMapIcon
   parent: BaseItem
   name: Icon
+  abstract: true
   suffix: GuideBookEntity
   components:
   - type: Sprite
