--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
@@ -160,6 +160,7 @@
     max: 719 # TODO RMC14 this should be per part and smaller
   - type: Perishable
     rotAfter: 300
+    ignoreTemperature: true
   - type: AtmosExposed
   - type: Temperature
     heatDamageThreshold: 325
