fix game crashing

--- a/Resources/Prototypes/_RMC14/Recipes/Materials/plasteel.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Materials/plasteel.yml
@@ -6,7 +6,7 @@
   doAfterTime: 4
   doAfterTimeMin: 2
   materialCost: 8
-  skillLevel: 2
+  requiredSkillLevel: 2
 
 - type: rmcConstruction
   parent: RMCPlasteelBarricadeFoldableBuild
