--- a/Resources/Prototypes/_RMC14/Recipes/Materials/metal.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Materials/metal.yml
@@ -2,6 +2,7 @@
   id: RMCDividerConstruction
   name: divider
   isDivider: true
+  prototype: Error
 
 - type: rmcConstruction
   id: RMCBarbedWireBuild
@@ -112,7 +113,7 @@
   id: RMCComfyChairBase # Base
   name: chair comfy
   materialCost: 2
-  restrictedTags: RMCSeat
+  restrictedTags: [RMCSeat]
 
 - type: rmcConstruction
   parent: RMCComfyChairBase
