--- a/Resources/Prototypes/_RMC14/Recipes/Materials/metal.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Materials/metal.yml
@@ -13,6 +13,7 @@
   skill: RMCSkillConstruction
   materialCost: 1
   ignoreBuildRestrictions: true
+  restrictedCollisionGroup: null
   stackAmounts:
   - 5
   - 10
@@ -30,23 +31,26 @@
   requiredSkillLevel: 1
 
 - type: rmcConstruction
-  parent: RMCMetalBarricadeBuild
   id: RMCMetalBarricadeFoldableBuild
   name: folding metal barricade
   prototype: CMBarricadeMetalDoor
   doAfterTime: 3
   doAfterTimeMin: 1.5
   materialCost: 6
+  restrictedCollisionGroup: Impassable
+  skill: RMCSkillConstruction
   requiredSkillLevel: 2
 
 - type: rmcConstruction
-  parent: RMCMetalBarricadeBuild
   id: RMCHandrailBuild
   name: handrail
   prototype: RMCBarricadeHandrail
   doAfterTime: 2
   doAfterTimeMin: 1
   materialCost: 2
+  restrictedCollisionGroup: Impassable
+  skill: RMCSkillConstruction
+  requiredSkillLevel: 1
 
 - type: rmcConstruction
   id: RMCFloorTileBuild
@@ -56,6 +60,7 @@
   doAfterTimeMin: 0
   materialCost: 1
   ignoreBuildRestrictions: true
+  restrictedCollisionGroup: null
   amount: 4
   stackAmounts:
   - 20
@@ -68,6 +73,7 @@
   doAfterTimeMin: 0
   materialCost: 1
   ignoreBuildRestrictions: true
+  restrictedCollisionGroup: null
   amount: 2
   stackAmounts:
   - 10
@@ -76,24 +82,25 @@
   - 60
 
 - type: rmcConstruction
-  parent: RMCMetalBarricadeFoldableBuild
   id: RMCWallGirderBuild
   name: wall girder
   prototype: CMGirder
+  noRotate: true
   doAfterTime: 5
   materialCost: 2
   restrictedCollisionGroup: MidImpassable
-  noRotate: true
+  skill: RMCSkillConstruction
   requiredSkillLevel: 2
 
 - type: rmcConstruction
-  parent: RMCWallGirderBuild
   id: RMCWindowFrameBuild
   name: window frame
   prototype: RMCWindowFrameAlmayer
+  noRotate: true
   doAfterTime: 5
   materialCost: 5
   restrictedCollisionGroup: MidImpassable
+  skill: RMCSkillConstruction
   requiredSkillLevel: 2
 
 # Comfy Chairs
@@ -109,47 +116,47 @@
   - RMCComfyChairTealBuild
 
 - type: rmcConstruction
-  abstract: true
-  id: RMCComfyChairBase # Base
-  name: chair comfy
+  id: RMCComfyChairBeigeBuild
+  name: beige comfy chair
+  prototype: CMChairComfyBeige
   materialCost: 2
   restrictedTags: [RMCSeat]
 
 - type: rmcConstruction
-  parent: RMCComfyChairBase
-  id: RMCComfyChairBeigeBuild
-  name: beige comfy chair
-  prototype: CMChairComfyBeige
-
-- type: rmcConstruction
-  parent: RMCComfyChairBase
   id: RMCComfyChairBlackBuild
   name: black comfy chair
   prototype: CMChairComfyBlack
+  materialCost: 2
+  restrictedTags: [RMCSeat]
 
 - type: rmcConstruction
-  parent: RMCComfyChairBase
   id: RMCComfyChairBrownBuild
   name: brown comfy chair
   prototype: CMChairComfy
+  materialCost: 2
+  restrictedTags: [RMCSeat]
 
 - type: rmcConstruction
-  parent: RMCComfyChairBase
   id: RMCComfyChairLimeBuild
   name: lime comfy chair
   prototype: CMChairComfyLime
+  materialCost: 2
+  restrictedTags: [RMCSeat]
 
 - type: rmcConstruction
-  parent: RMCComfyChairBase
   id: RMCComfyChairTealBuild
   name: teal comfy chair
   prototype: CMChairComfyTeal
+  materialCost: 2
+  restrictedTags: [RMCSeat]
 
 - type: rmcConstruction
-  parent: RMCWallGirderBuild
   id: RMCMachineFrameBuild
   name: machine frame
   prototype: CMMachineFrameUnfinished
+  restrictedCollisionGroup: MachineLayer
+  noRotate: true
   doAfterTime: 2.5
   materialCost: 5
-  restrictedCollisionGroup: MachineLayer
+  skill: RMCSkillConstruction
+  requiredSkillLevel: 2
