--- a/Resources/Prototypes/_RMC14/Recipes/Materials/plasteel.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Materials/plasteel.yml
@@ -1,35 +1,39 @@
 - type: rmcConstruction
-  parent: RMCMetalBarricadeBuild
   id: RMCPlasteelBarricadeFoldableBuild
   name: folding plasteel barricade
   prototype: CMBarricadePlasteelDoor
+  restrictedCollisionGroup: Impassable
   doAfterTime: 4
   doAfterTimeMin: 2
   materialCost: 8
+  skill: RMCSkillConstruction
   requiredSkillLevel: 2
 
 - type: rmcConstruction
-  parent: RMCPlasteelBarricadeFoldableBuild
   id: RMCPlasteelBarricadeBuild
   name: plasteel barricade
   prototype: RMCBarricadePlasteel
+  restrictedCollisionGroup: Impassable
   doAfterTime: 8
   doAfterTimeMin: 2
   materialCost: 6
+  skill: RMCSkillConstruction
+  requiredSkillLevel: 2
 
 - type: rmcConstruction
-  parent: RMCWindowFrameBuild
   id: RMCReinforcedWindowFrameBuild
   name: reinforced window frame
   prototype: RMCWindowFrameColonyReinforced
 
 - type: rmcConstruction
-  parent: RMCMetalRodBuild
   id: RMCPlasteelRodBuild
   name: plasteel rod
   prototype: CMRodPlasteel1
+  doAfterTime: 0
+  doAfterTimeMin: 0
   materialCost: 1
-  amount: 1
+  ignoreBuildRestrictions: true
+  restrictedCollisionGroup: null
   stackAmounts:
   - 15
   - 30
@@ -38,6 +42,7 @@
   id: RMCMetalCrateBuild
   name: metal crate
   prototype: RMCCrateMetalBuildable
+  restrictedCollisionGroup: MidImpassable
+  noRotate: true
   doAfterTime: 5
   materialCost: 5
-  restrictedCollisionGroup: MidImpassable
