--- a/Resources/Prototypes/_RMC14/Recipes/Materials/rods.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Materials/rods.yml
@@ -1,16 +1,19 @@
 - type: rmcConstruction
-  parent: RMCWindowFrameBuild
   id: RMCGrilleBuild
   name: grille
   prototype: RMCGrille
+  noRotate: true
   doAfterTime: 2
   materialCost: 4
+  skill: RMCSkillConstruction
   requiredSkillLevel: 1
 
 - type: rmcConstruction
-  parent: RMCGrilleBuild
   id: RMCFenceBuild
   name: fence
   prototype: CMFence
+  noRotate: true
   doAfterTime: 2
   materialCost: 10
+  skill: RMCSkillConstruction
+  requiredSkillLevel: 1
