--- a/Resources/Prototypes/_RMC14/Recipes/Materials/plasteel.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Materials/plasteel.yml
@@ -24,6 +24,12 @@
   id: RMCReinforcedWindowFrameBuild
   name: reinforced window frame
   prototype: RMCWindowFrameColonyReinforced
+  restrictedCollisionGroup: MidImpassable
+  noRotate: true
+  doAfterTime: 4
+  materialCost: 5
+  skill: RMCSkillConstruction
+  requiredSkillLevel: 2
 
 - type: rmcConstruction
   id: RMCPlasteelRodBuild
