--- a/Resources/Prototypes/_RMC14/Recipes/Materials/metal.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Materials/metal.yml
@@ -154,7 +154,7 @@
   id: RMCMachineFrameBuild
   name: machine frame
   prototype: CMMachineFrameUnfinished
-  restrictedCollisionGroup: MachineLayer
+  restrictedCollisionGroup: MidImpassable
   noRotate: true
   doAfterTime: 2.5
   materialCost: 5
