--- a/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Misc/flashlight.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Misc/flashlight.yml
@@ -3,17 +3,6 @@
   id: RMCFlashLightGraph
   start: start
   graph:
-    - node: start
-      edges:
-        - to: RailLight
-          steps:
-            - tag: Flashlight
-              name: flashlight
-              icon:
-                sprite: _RMC14/Objects/Tools/Light/flashlight.rsi
-                state: flashlight
-              doAfter: 1
-              
     - node: RailLight
       entity: RMCAttachmentRailFlashlight
       edges:
@@ -24,3 +13,8 @@
 
     - node: Flashlight
       entity: RMCFlashlight
+      edges:
+        - to: RailLight
+          steps:
+            - tool: Screwing
+              doAfter: 1
