fix starting node not existing

--- a/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Misc/flashlight.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Misc/flashlight.yml
@@ -1,7 +1,7 @@
 - type: constructionGraph
   parent: RMC
   id: RMCFlashLightGraph
-  start: start
+  start: Flashlight
   graph:
     - node: RailLight
       entity: RMCAttachmentRailFlashlight
