--- a/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Misc/flashlight.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Misc/flashlight.yml
@@ -1,8 +1,10 @@
 - type: constructionGraph
   parent: RMC
   id: RMCFlashLightGraph
-  start: Flashlight
+  start: start
   graph:
+    - node: start
+
     - node: RailLight
       entity: RMCAttachmentRailFlashlight
       edges:
