--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/synth.yml
@@ -99,6 +99,8 @@
       - type: IVDripTarget
       - type: RMCSuicide
         damage: { }
+      - type: RMCLeapProtection
+        stunDuration: 3
   hidden: true
 
 - type: startingGear
