--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
@@ -80,6 +80,8 @@
       - type: EyeProtection
       - type: WoundableUntreatable
       - type: Insulated
+      - type: RMCLeapProtection
+        stunDuration: 3
       removeComponents:
       - type: CMSurgeryTarget
       - type: Infectable
