--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/medical_technician_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/medical_technician_survivor.yml
@@ -33,7 +33,7 @@
   id: RMCGearSurvivorMedicalTechnician
   equipment:
     head: RMCHeadCapFlippable
-    jumpsuit: RMCJumpsuitCivilian # TODO green utility jumpsuit
+    jumpsuit: RMCJumpsuitCivilianGreen # TODO green utility jumpsuit
 
 - type: entity
   parent: CMSpawnPointJobBase
