Uncomment spawnMenuRoleName. THIS WILL BREAK LINTER UNTIL RELEVANT PR IS MERGED

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/beachbum.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/beachbum.yml
@@ -5,7 +5,7 @@
   description: cm-job-description-survivor
   playTimeTracker: CMJobSurvivorBeachBum
   startingGear: RMCGearSurvivorBeachBum
-  #spawnMenuRoleName: Beach Bum (NV Survivor)
+  spawnMenuRoleName: Beach Bum (NV Survivor)
   special:
   - !type:AddComponentSpecial
     components:
