--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/cargo_technician_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/cargo_technician_survivor.yml
@@ -5,7 +5,7 @@
   description: cm-job-description-survivor
   playTimeTracker: CMJobSurvivorCargoTechnician
   startingGear: RMCGearSurvivorCargoTechnician
-  #spawnMenuRoleName: Cargo Technician (NV Survivor)
+  spawnMenuRoleName: Cargo Technician (NV Survivor)
   special:
   - !type:AddComponentSpecial
     components:
