--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/commander_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/commander_survivor.yml
@@ -11,7 +11,7 @@
   roleWeight: 0.25
   icon: "RMCJobIconSurvivorCommanderNewVaradero"
   hasIcon: true
-  #spawnMenuRoleName: Commander (NV Survivor)
+  spawnMenuRoleName: Commander (NV Survivor)
   special:
   - !type:AddComponentSpecial
     components:
