--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/medical_technician_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/medical_technician_survivor.yml
@@ -5,7 +5,7 @@
   description: cm-job-description-survivor
   playTimeTracker: CMJobSurvivorMedicalTechnician
   startingGear: RMCGearSurvivorMedicalTechnician
-  #spawnMenuRoleName: Medical Technician (NV Survivor)
+  spawnMenuRoleName: Medical Technician (NV Survivor)
   special:
   - !type:AddComponentSpecial
     components:
