fix surv base gear (i make lots of YML mistakes)

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/beachbum.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/beachbum.yml
@@ -42,7 +42,7 @@
         - RMCUndershirtStraplessJungle
 
 - type: startingGear
-  parent: RMCGearSurvivor
+  parent: RMCGearSurvivorBase
   id: RMCGearSurvivorBeachBum
   equipment:
     jumpsuit: RMCJumpsuitRedShorts
