--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/civilian_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/civilian_survivor.yml
@@ -46,14 +46,20 @@
   hasIcon: false
 
 - type: startingGear
-  id: RMCGearSurvivor
+  id: RMCGearSurvivorBase
   equipment:
-    # jumpsuit: CMJumpsuitColonist See RMCSurvivorPresetCivilianOutfits
     back: RMCSatchelCivilianFill
-    # shoes: RMCShoesBlack
     id: CMIDCardColonist
     ears: CMHeadsetColony
     pocket1: RMCPouchSurvivalFill
+
+- type: startingGear
+  parent: RMCGearSurvivorBase
+  id: RMCGearSurvivor
+  equipment:
+    # jumpsuit: CMJumpsuitColonist See RMCSurvivorPresetCivilianOutfits
+    # shoes: RMCShoesBlack
+    pocket2: RMCPouchGeneral
 
 - type: startingGear
   parent: RMCGearSurvivor
@@ -61,7 +67,6 @@
   equipment:
     jumpsuit: CMJumpsuitColonist
     shoes: RMCShoesBlack
-    pocket2: RMCPouchGeneral
 
 - type: entity
   parent: CMSpawnPointJobBase
