--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
@@ -57,7 +57,6 @@
       key_slots:
       - CMEncryptionKeyCommon
       - RMCEncryptionKeyLiaison
-  - type: GrantSquadLeaderTracker
   - type: GrantTacMapAlert
   - type: GrantSquadLeaderTracker
     defaultMode: LeaderPmc
@@ -192,9 +191,6 @@
     channels:
     - MarineForecon
   - type: GrantSquadLeaderTracker
-    defaultMode: CommandingOfficer
+    defaultMode: FORECONCommandingOfficer
     trackerModes:
-    - CommandingOfficer
-    - SquadLeader
-    - FireteamLeader
-    - PrimaryLandingZone
+    - FORECONCommandingOfficer
