Another test fix

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/ship_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/ship_headsets.yml
@@ -66,6 +66,7 @@
   - type: RMCHeadset
     radioTextIncrease: 3
   - type: GrantSquadLeaderTracker
+    defaultMode: PrimaryLandingZone
     trackerModes:
     - SquadLeader
     - PrimaryLandingZone
